kube/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: front
  labels:
    shared-gateway-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: back
  labels:
    shared-gateway-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
