kube/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: front
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - env:
          - name: "API_HOST"
            value: "api.back"
          image: ghcr.io/do3-2023/do3-2023/dts-monitoring/frontend:v1.2
          imagePullPolicy: IfNotPresent
          name: web
          ports:
            - containerPort: 4000
              name: web
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: web
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: back
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: db-connect
            - secretRef:
                name: db
          image: ghcr.io/do3-2023/do3-2023/dts-monitoring/api:v1.2
          imagePullPolicy: IfNotPresent
          name: api
          ports:
            - containerPort: 3000
              name: api
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: db-configmap
        configMap:
          name: db-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: data
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: db
    spec:
      containers:
        - env:
            - name: "PGDATA"
              value: /var/lib/postgresql/data/pgdata
            - name: "POSTGRES_DB"
              valueFrom:
                secretKeyRef:
                  name: db
                  key: POSTGRES_DB
            - name: "POSTGRES_USER"
              valueFrom:
                secretKeyRef:
                  name: db
                  key: POSTGRES_USER
            - name: "POSTGRES_PASSWORD"
              valueFrom:
                secretKeyRef:
                  name: db
                  key: POSTGRES_PASSWORD
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          name: db
          ports:
            - name: db
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: db
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: db
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pv-database
      volumes:
        - name: pv-database
          persistentVolumeClaim:
            claimName: pvc-database-local
