kube/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: data
spec:
  ports:
  - name: db
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: front
spec:
  ports:
    - name: web
      nodePort: 31000
      port: 80
      protocol: TCP
      targetPort: 4000 
  selector:
    name: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: back
spec:
  ports:
  - name: api
    nodePort: 32000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: api
  type: NodePort
