kube/test-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-test-green
  namespace: front
spec:
  ports:
    - name: web
      nodePort: 31500
      port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    name: web-green
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: api-test-green
  namespace: back
spec:
  ports:
  - name: api
    nodePort: 32500
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: api-green
  type: NodePort
